# FastClip

./: .gitignore  FastClip.code-workspace  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
src/: App.css  App.tsx  main.tsx  theme.ts
src-tauri/: Cargo.toml  rustfmt.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  password.rs  structures.rs  tray.rs
src/Classes/: FastClip.tsx
src/Components/: Clip.tsx  DelClip.tsx  DeleteClip.tsx  EditClip.tsx  NewClip.tsx  SettingsClip.tsx  ToolBar.tsx  Viewport.tsx
src/Customs/: ContextMenu.tsx
src/Tools/: truncate.tsx
