[package]
name = "fast-clip"
version = "0.4.4-1"
description = "A fast and lightweight clipboard manager built with Rust and Tauri"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fast_clip_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.43.0", features = ["full"] }
anyhow = "1.0.95"
uuid = { version = "1.13.1", features = ["serde", "v4"] }
# surrealdb = "2.2.0"
dirs = "6.0.0"
log = "0.4"
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-persisted-scope = "2"
tauri-plugin-log = "2"
tauri-plugin-clipboard-manager = "2.2.1"
tauri-plugin-opener = "2"
tauri-plugin-fs = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
